# navcli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml
docs/: Makefile
docs/source/: conf.py  first_steps.rst  index.rst
src/: __main__.py
src/navcli/: exceptions.py  hightlights.py  navigation.py  structs.py
src/navcli/actions/: __init__.py  base.py  commons.py  quit.py  redirect.py
src/navcli/highlights/: __init__.py  arrows.py  base.py  colors.py
src/navcli/structs/: __init__.py  commons.py
