[tool.poetry]
name = "navcli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = [
    "src"
]

[tool.poetry.scripts]
console = "src.__main__:run"

[tool.poetry.dependencies]
python = "~3.9"
msgspec = "^0.18.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
sphinx-autoapi = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
